crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unnamed_composite_index_snapshot@unnamed_composite_index_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const unnamedIndex = pgTable("unnamed_index", {
  id: integer("id").primaryKey(),
  colA: integer("col_a").notNull(),
  colB: integer("col_b").notNull(),
}, (t) => ({
  idxColAColB: index().on(t.colA, t.colB),
}));
